--- a/cheese/css/style_sait_14.css
+++ b/cheese/css/style_sait_14.css
@@ -1,6 +1,4 @@
 body{
-	-webkit-font-family: Сomic Sans MS;
-	    -ms-font-family: Сomic Sans MS;
 	font-family: Lifehack Basic;
 	height: 100%;
 	width: 100%;
@@ -385,7 +383,9 @@ input:-ms-input-placeholder {
 @media screen and (max-device-width: 392px){
 	.carousel-items h1{
 		float: left;
-		margin-right: 0;
+		margin-left: 10%;
+		font-size: 25px;
+		width: 70%;
 	}
 }
 /*style for down*/
@@ -571,11 +571,6 @@ input:-ms-input-placeholder {
 	.burger-link{
 		display: block;
 		position: fixed;
-	}
-}
-@media screen and (max-device-width: 580px){
-	.menu-link{
-		margin-bottom: 20px;
 	}
 }
 /*@media screen and (max-height: 512px){
@@ -945,11 +940,13 @@ input:-ms-input-placeholder {
 	#produkt h1{
 		margin-right: 20px;
 		margin-left: 20px;
-		font-size: 27px;
 	}
 	.hot-produkt{
-		min-width: 80%;
-		justify-content: space-between;
+		min-width: 56%;
+	}
+	.produkt{
+		height: 250px;
+		width: 300px;
 	}
 	.choose{
 		width: 80%;
@@ -962,8 +959,7 @@ input:-ms-input-placeholder {
 	}
 }
 @media screen and (max-device-width: 505px){
-		.produkt{
-			height: 70px;
-			width: 120px;
-	}
+	.choose input{
+	width: 100%;
+}
 }
